tests/paczka1/small_fuzzy/51982968.err
Error in line 5: LwADoR S191 44,0
Error in line 1: A95 S191 11,7
